# callsign-alert

./: .dockerignore  .gitignore  Dockerfile  fly.toml  manage.py  pyproject.toml  requirements.txt  secrets.yml.enc
.github/workflows/: fly.yml
callsign_alert/: asgi.py  settings.py  urls.py  wsgi.py
callsign_alert/app/models/: __init__.py
callsign_alert/app/views/: __init__.py  home_page.py
callsign_alert/settings/: __init__.py  _shared.py  common.py  development.py  production.py
core/migrations/: 0001_initial.py
core/views/: home_page.py
